# app/Http/Resources/TransactionCollection.php
@@ -1,0 +1,39 @@
+<?php
+
+namespace App\Http\Resources;
+
+use Illuminate\Http\Request;
+use Illuminate\Http\Resources\Json\ResourceCollection;
+use OpenApi\Attributes as OA;
+
+#[OA\Schema(
+    schema: 'TransactionCollection',
+    title: 'TransactionCollection',
+    description: 'TransactionCollection',
+    properties: [
+        new OA\Property(property: 'data', type: 'array', items: new OA\Items(ref: '#/components/schemas/TransactionResource')),
+        new OA\Property(property: 'current_page', type: 'integer'),
+        new OA\Property(property: 'per_page', type: 'integer'),
+        new OA\Property(property: 'total', type: 'integer'),
+        new OA\Property(property: 'last_page', type: 'integer'),
+    ],
+    type: 'object'
+)]
+class TransactionCollection extends ResourceCollection
+{
+    /**
+     * Transform the resource collection into an array.
+     *
+     * @return array<int|string, mixed>
+     */
+    public function toArray(Request $request): array
+    {
+        return [
+            'data' => $this->collection,
+            'current_page' => $this->resource->currentPage(),
+            'last_page' => $this->resource->lastPage(),
+            'per_page' => $this->resource->perPage(),
+            'total' => $this->resource->total(),
+        ];
+    }
+}
